# fmt-code-size-experiments

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  compiletimecheck.cpp  copy_to_pictures.sh  nonstdstring.cpp  runtimecheck.cpp  usecompiletimecheck.cpp  usefmt.cpp  useprintf.cpp
examples/: CMakeLists.txt  fmtsyntax.cpp  printfsyntax.cpp
include/nonstdstring/: nonstdstring.h
memory_buffer/: CMakeLists.txt
memory_buffer/include/memory_buffer/: memory_buffer.h
memory_buffer/test/: CMakeLists.txt  basic.cpp
microbenchmarks/: CMakeLists.txt  copy.cpp  doubles.cpp  stringlength.cpp  stringlength_frontback.cpp  usefmt.cpp  useprintf.cpp
nonstdstring/: CMakeLists.txt  nonstdstring.cpp
nonstdstring/include/nonstdstring/: nonstdstring.h
plots/: CMakeLists.txt  stringlengthplots.py
usefmt_buf1024grow2/: CMakeLists.txt
usefmt_buf1024grow2/include/usefmt/: usefmt.h
usefmt_buf32grow2/: CMakeLists.txt
usefmt_buf32grow2/include/usefmt/: usefmt.h
usefmt_buf512grow2/: CMakeLists.txt  usefmt.cpp
usefmt_buf512grow2/include/usefmt/: usefmt.h
usefmt_directpushback/: CMakeLists.txt
usefmt_directpushback/include/usefmt/: usefmt.h
usefmt_erasedbuffer/: CMakeLists.txt  usefmt.cpp
usefmt_erasedbuffer/include/usefmt/: usefmt.h
usefmt_erasedpushback/: CMakeLists.txt  usefmt.cpp
usefmt_erasedpushback/include/usefmt/: usefmt.h
usefmt_originalfmt/: CMakeLists.txt
usefmt_originalfmt/include/usefmt/: usefmt.h
usefmt_singlealloc/: CMakeLists.txt  usefmt.cpp
usefmt_singlealloc/include/usefmt/: usefmt.h
