add_executable(copybenchmark copy.cpp)
target_link_libraries(copybenchmark benchmark::benchmark)

add_executable(stringlengthbenchmark_originalfmt stringlength.cpp)
target_link_libraries(stringlengthbenchmark_originalfmt benchmark::benchmark usefmt_originalfmt)

add_executable(stringlengthbenchmark_buf32grow2 stringlength.cpp)
target_link_libraries(stringlengthbenchmark_buf32grow2 benchmark::benchmark usefmt_buf32grow2)

add_executable(stringlengthbenchmark_buf512grow2 stringlength.cpp)
target_link_libraries(stringlengthbenchmark_buf512grow2 benchmark::benchmark usefmt_buf512grow2)

add_executable(stringlengthbenchmark_buf1024grow2 stringlength.cpp)
target_link_libraries(stringlengthbenchmark_buf1024grow2 benchmark::benchmark usefmt_buf1024grow2)

add_executable(stringlengthbenchmark_directpushback stringlength.cpp)
target_link_libraries(stringlengthbenchmark_directpushback benchmark::benchmark usefmt_directpushback)

add_executable(stringlengthbenchmark_erasedbuffer stringlength.cpp)
target_link_libraries(stringlengthbenchmark_erasedbuffer benchmark::benchmark usefmt_erasedbuffer)

add_executable(stringlengthbenchmark_erasedpushback stringlength.cpp)
target_link_libraries(stringlengthbenchmark_erasedpushback benchmark::benchmark usefmt_erasedpushback)

add_executable(stringlengthbenchmark_singlealloc stringlength.cpp)
target_link_libraries(stringlengthbenchmark_singlealloc benchmark::benchmark usefmt_singlealloc)

add_executable(doublesbenchmark_directpushback doubles.cpp)
target_link_libraries(doublesbenchmark_directpushback benchmark::benchmark usefmt_directpushback)

add_executable(doublesbenchmark_erasedbuffer doubles.cpp)
target_link_libraries(doublesbenchmark_erasedbuffer benchmark::benchmark usefmt_erasedbuffer)

add_executable(doublesbenchmark_erasedpushback doubles.cpp)
target_link_libraries(doublesbenchmark_erasedpushback benchmark::benchmark usefmt_erasedpushback)

add_executable(doublesbenchmark_singlealloc doubles.cpp)
target_link_libraries(doublesbenchmark_singlealloc benchmark::benchmark usefmt_singlealloc)